bk_ida/gccida/c1/def_cfa_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1148:17: error: expected expression
v2 = *( _OWORD *)&loc_p->base_offset; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1148:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)&loc_p->base_offset; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1149:12: error: expected expression
*( _OWORD *)&cfa.reg = *( _OWORD *)&loc_p->reg; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1149:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfa.reg = *( _OWORD *)&loc_p->reg; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1149:35: error: expected expression
*( _OWORD *)&cfa.reg = *( _OWORD *)&loc_p->reg; 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1149:27: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfa.reg = *( _OWORD *)&loc_p->reg; 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1150:12: error: expected expression
*( _OWORD *)&cfa.base_offset = v2; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1150:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfa.base_offset = v2; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1151:17: error: expected expression
v3 = *( _OWORD *)&loc_p->base_offset; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1151:9: error: use of undeclared identifier '_OWORD'
v3 = *( _OWORD *)&loc_p->base_offset; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1152:12: error: expected expression
*( _OWORD *)&v11.reg = *( _OWORD *)&loc_p->reg; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1152:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11.reg = *( _OWORD *)&loc_p->reg; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1152:35: error: expected expression
*( _OWORD *)&v11.reg = *( _OWORD *)&loc_p->reg; 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1152:27: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11.reg = *( _OWORD *)&loc_p->reg; 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1153:12: error: expected expression
*( _OWORD *)&v11.base_offset = v3; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1153:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11.base_offset = v3; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1163:49: error: expected expression
if ( __PAIR128__( v11.offset, v5) != *( _OWORD *)&v12.reg 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/dwarf2out.c:1163:41: error: use of undeclared identifier '_OWORD'
if ( __PAIR128__( v11.offset, v5) != *( _OWORD *)&v12.reg 
                                        ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/def_cfa_1/src/obj/dwarf2out.o] Error 1
